adding more case in the parameterized function and add the tuple function to return the employee of month and unpacking of tuple

--- a/function/FirstParameterized_Function.ipynb
+++ b/function/FirstParameterized_Function.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def HelloWorld(name):\n",
+    "    '''\n",
+    "    when we doesn't passed parameter will calling function get error\n",
+    "    ---------------------------------------------------------------------------\n",
+    "TypeError                                 Traceback (most recent call last)\n",
+    "<ipython-input-8-601c4bd09ba7> in <module>\n",
+    "----> 1 HelloWorld() #when we doesn't passed parameter will calling function get error\n",
+    "\n",
+    "TypeError: HelloWorld() missing 1 required positional argument: 'name'\n",
+    "    '''\n",
     "    print (f\"Hello World from {name}\")\n",
     "    print(\"Hope all of the world is happy and smilling\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -31,10 +40,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "HelloWorld() missing 1 required positional argument: 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-601c4bd09ba7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mHelloWorld\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#when we doesn't passed parameter will calling function get error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: HelloWorld() missing 1 required positional argument: 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "HelloWorld() #when we doesn't passed parameter will calling function get error \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def check_even(list):\n",
+    "    for x in list:\n",
+    "        if(x%2==0):\n",
+    "            return x\n",
+    "        else:\n",
+    "            pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_even([1,3,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_even([2,4,5,7,9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#to check the whole list and print false if not a single even is there\n",
+    "def check_even(list):\n",
+    "    for x in list:\n",
+    "        if(x%2==0):\n",
+    "            return True\n",
+    "        else:\n",
+    "            pass\n",
+    "    return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_even([1,3,5,7,9,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#to return the list of even number\n",
+    "def check_even(list):\n",
+    "    even_numbers=[]\n",
+    "    for x in list:\n",
+    "        if(x%2==0):\n",
+    "            even_numbers.append(x)\n",
+    "        else:\n",
+    "            pass\n",
+    "    return even_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[34, 2, 8]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_even([1,34,5,2,1,8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_even([1,3,5,7,9,11])"
+   ]
   }
  ],
  "metadata": {
